--- a/src/Components/TopNav/TopNav.module.css
+++ b/src/Components/TopNav/TopNav.module.css
@@ -20,27 +20,24 @@
   align-items: center;
   white-space: nowrap;
   cursor: pointer;
-  max-width: 12.5rem;
-}
-
-.logoIcon {
-  color: var(--color-primary);
-  font-size: 2rem;
-  margin-right: 0.5rem;
+  /* max-width: 12.5rem; */
 }
 
 .logoText {
-  margin: 0 !important;
-  margin-left: 0.5rem;
-  font-weight: 500 !important;
-  font-size: 1.8rem;
-  color: inherit;
+  font-size: 2rem;
+  font-weight: 700;
+  padding-top: 0.5rem;
+  margin: 0 0 0 0.5rem;
 }
 
-.navHeaderLogo {
-  font-size: 2rem;
-  color: var(--color-primary);
-  margin-right: 0.5rem;
+.logoWrapper {
+  height: 2rem;
+  object-fit: cover;
+}
+
+.logo {
+  height: 100%;
+  width: 100%;
 }
 
 /* Right Side Nav */
@@ -81,7 +78,7 @@
     font-size: 1rem;
   }
 
-  .navHeaderLogo {
-    font-size: 1.4rem;
+  .logoWrapper {
+    display: none;
   }
 }
