--- a/src/Pages/Timesheet/Fields/InputStyles.module.css
+++ b/src/Pages/Timesheet/Fields/InputStyles.module.css
@@ -1,7 +1,7 @@
 .field {
   height: 100%;
   width: 100%;
-  border-radius: 0.1rem;
+  border-radius: 0.3rem;
 }
 
 .text {
@@ -13,4 +13,5 @@
   align-items: center;
   justify-content: center;
   background: var(--inputBackground);
+  border: var(--border-main);
 }
