complete redesign of main dashboard

--- a/src/Pages/Dashboard/Bulletin/Bulletin.module.css
+++ b/src/Pages/Dashboard/Bulletin/Bulletin.module.css
@@ -1,7 +1,6 @@
 .container {
   display: grid;
-  grid-template-rows: repeat(3, 1fr);
-  height: calc(100% - 3rem);
+  gap: 1rem;
 }
 
 .addBulletinIcon {
@@ -11,4 +10,8 @@
 
 .addBulletinIcon:hover {
   cursor: pointer;
+}
+
+.viewMoreText {
+  text-align: center;
 }
