--- a/src/Pages/Dashboard/Bulletin/Post.module.css
+++ b/src/Pages/Dashboard/Bulletin/Post.module.css
@@ -1,11 +1,12 @@
 .post {
-  padding: 0rem 1rem;
-  padding-right: 1.5rem;
   border-bottom: var(--border-main);
-  display: flex;
   position: relative;
   align-items: center;
   justify-content: space-between;
+  border-radius: var(--section-border-radius);
+  margin-bottom: 1rem;
+  box-shadow: var(--boxshadow-main);
+  overflow: hidden;
 }
 
 .post:hover {
@@ -13,8 +14,21 @@
   cursor: pointer;
 }
 
+.title {
+  width: 100%;
+  padding: 1rem;
+  border-bottom: var(--border-main);
+}
+
+.info {
+  padding: 1rem;
+  display: flex;
+  gap: 1rem;
+}
+
 .author {
   font-weight: 300;
+  color: var(--color_gray_4);
 }
 
 .postImage {
@@ -25,14 +39,18 @@
 }
 
 .postIcon {
-  font-size: 1.2rem;
+  font-size: 1.5rem;
   margin-right: 0.5rem;
+  color: #fff;
 }
 
 .postViewed {
   font-size: 1.3rem;
-  position: relative;
+
   color: var(--color_gray_4);
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
 }
 
 .postViewed:hover {
