--- a/src/Pages/Dashboard/TileLayout/TileLayout.module.css
+++ b/src/Pages/Dashboard/TileLayout/TileLayout.module.css
@@ -2,6 +2,7 @@
   display: block;
   height: 100%;
   position: relative;
+  padding: 1rem;
 }
 
 .header {
@@ -12,29 +13,7 @@
   padding: 0rem 1rem;
   font-weight: 500;
   font-size: 1.1rem;
-  border-bottom: var(--border-main);
   position: relative;
-  background: var(--color-primary);
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
-}
-
-.header > span {
-  color: rgb(255, 255, 255);
-}
-
-.container:hover .header_border {
-  height: 0.25rem;
-}
-
-.header_border {
-  opacity: 1;
-  position: absolute;
-  width: 100%;
-  height: 0;
-  top: 0;
-  left: 0;
-  background: #432ecb67;
-  transition: 0.1s height ease-in;
 }
 
 .iconContainer {
