--- a/src/Pages/Dashboard/index.module.css
+++ b/src/Pages/Dashboard/index.module.css
@@ -70,6 +70,11 @@
   position: fixed;
   bottom: 2rem;
   right: 2rem;
+  transition: 0.3s ease-in;
+}
+
+.chatWrapper:hover {
+  transform: scale(105%);
 }
 
 .chat {
