--- a/src/Pages/Timesheet/Row/Row.module.css
+++ b/src/Pages/Timesheet/Row/Row.module.css
@@ -20,7 +20,7 @@
   height: 100%;
   display: flex;
   align-items: center;
-  justify-content: end;
+  justify-content: flex-end;
 }
 
 .dateLarge {
