--- a/src/App/css/index.css
+++ b/src/App/css/index.css
@@ -35,18 +35,17 @@ h6 {
   --color_black: #000;
 
   /* Colors */
-  --blue: rgb(28, 28, 65);
-  --section: rgb(40, 37, 85);
+  /* --blue: rgb(28, 28, 65);
   --input: rgb(61, 57, 116);
   --color-primary: #9254de;
   --color-primary-trans: #5c1fc4be;
   --color_red_3: #ff7875;
-  --color_yellow_3: #ffc53d;
+  --color_yellow_3: #ffc53d; */
 
   /* Colors */
-  --blue: rgb(12, 12, 12);
-  --section: #181818;
-  --input: #212124;
+  --blue: rgb(20, 20, 25);
+  --section: rgb(19, 30, 42);
+  --input: rgba(29, 46, 64, 0.539);
   --color-primary: #9254de;
   --color-primary-trans: #5c1fc4be;
   --color_red_3: #ff7875;
