--- a/src/Components/TopNav/TopNav.module.css
+++ b/src/Components/TopNav/TopNav.module.css
@@ -1,6 +1,5 @@
 .topNav {
   width: 100%;
-  /* border-bottom: var(--border-main); */
   height: 4rem;
   position: fixed;
   top: 0;
@@ -10,8 +9,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0rem 1rem 0 0.5rem;
-  box-shadow: var(--boxshadow-main);
+  padding: 0rem 1rem;
+  border-bottom: var(--border-main);
 }
 
 /* Left Side Nav */
@@ -20,19 +19,20 @@
   align-items: center;
   white-space: nowrap;
   cursor: pointer;
+  height: 2.5rem;
 }
 
 .logoText {
-  font-size: 2.3rem;
+  font-size: 1.8rem;
   font-weight: 700;
-  /* padding-top: 0.5rem; */
-  margin: 0 0 0 0.5rem;
+  margin-left: 0.5rem;
+  color: var(--text-color);
+  margin-top: 0.2rem;
 }
 
 .logoWrapper {
-  height: 2rem;
+  height: 1.7rem;
   object-fit: cover;
-  margin-bottom: 0.5rem;
 }
 
 .logo {
