--- a/src/Components/Button/Button.module.css
+++ b/src/Components/Button/Button.module.css
@@ -14,11 +14,16 @@
   align-items: center;
   border: none;
   box-shadow: var(--boxshadow-input);
+  cursor: pointer;
+  box-shadow: 0.15rem 0.25rem 0.5rem rgba(0, 0, 0, 0.15);
 }
 
-.button:hover .buttonOverlay {
-  opacity: 0.3;
-  cursor: pointer;
+.button:hover {
+  background-color: var(--color-primary-hover);
+}
+
+.button:active {
+  box-shadow: 0rem 0rem 0rem rgba(0, 0, 0, 0);
 }
 
 .secondary {
@@ -28,15 +33,8 @@
   box-shadow: var(--boxshadow-input);
 }
 
-.buttonOverlay {
-  transition: 0.3s opacity ease;
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  background: rgb(255, 255, 255);
-  opacity: 0;
+.secondary:hover {
+  background-color: var(--inputBackground-hover);
 }
 
 @media screen and (max-width: 768px) {
