--- a/src/Components/SideNav/SideNav.module.css
+++ b/src/Components/SideNav/SideNav.module.css
@@ -1,12 +1,10 @@
 .sideNavMenu {
-  padding-left: 0.6rem;
+  padding: 0.5rem 1rem;
   height: 100%;
-  padding-top: 0.5rem;
-  border-top: var(--border-main);
-  box-shadow: var(--boxshadow-main);
+  border-right: var(--border-main);
 }
 
 .header {
-  margin: 0.5rem 0 0;
+  margin-top: 1rem;
   color: inherit;
 }
