--- a/src/css/animation.scss
+++ b/src/css/animation.scss
@@ -1,16 +1,16 @@
-@keyframes slidein {
-  from {
-    margin-top: 1rem;
-    opacity: 0;
-  }
+// @keyframes slidein {
+//   from {
+//     margin-top: 1rem;
+//     opacity: 0;
+//   }
 
-  to {
-    margin-top: 0rem;
-    opacity: 1;
-  }
-}
+//   to {
+//     margin-top: 0rem;
+//     opacity: 1;
+//   }
+// }
 
-.slideUpAnimation {
-  animation-name: slidein;
-  animation-duration: 0.75s;
-}
+// .slideUpAnimation {
+//   animation-name: slidein;
+//   animation-duration: 0.75s;
+// }
