--- a/src/css/antdStylesOverride.css
+++ b/src/css/antdStylesOverride.css
@@ -71,7 +71,7 @@
 .ant-select,
 .ant-input {
   background: var(--inputBackground);
-  transition: 0;
+  transition: none !important;
 }
 
 .ant-select > a {
@@ -215,6 +215,16 @@ label {
   box-shadow: none !important;
 }
 
+.ant-radio-button-wrapper:first-child {
+  border-radius: 0.5rem 0 0 0.5rem !important;
+  border: var(--border-main) !important;
+}
+
+.ant-radio-button-wrapper:last-child {
+  border-radius: 0 0.5rem 0.5rem 0 !important;
+  border: var(--border-main) !important;
+}
+
 .ant-menu-horizontal {
   border-bottom: var(--border-main) !important;
 }
@@ -233,6 +243,16 @@ input[type="file"] {
 
 .ant-select-dropdown {
   background-color: var(--sectionmain) !important;
+}
+
+.ant-select-selection-item {
+  transition: none !important;
+}
+
+.ant-select:not(.ant-select-customize-input) .ant-select-selector,
+.ant-select-single .ant-select-selector .ant-select-selection-item,
+.ant-select-single .ant-select-selector .ant-select-selection-placeholder {
+  transition: none !important;
 }
 
 .ant-select-item-option:hover,
